开始画操作界面，已画到发送车辆Vin这里

--- a/src/main/resources/templates/left.html
+++ b/src/main/resources/templates/left.html
@@ -86,7 +86,9 @@
                     <ul class="menuson">
                             <li><cite></cite><a th:href="@{/carLoan/clOrderInsert}" target="rightFrame" onclick="Show(this)">新增订单</a><i></i></li>
                             <li><cite></cite><a th:href="@{/carLoan/clOrderbaseSelect}" target="rightFrame" onclick="Show(this)">订单管理</a><i></i></li>
-                            <li><cite></cite><a th:href="@{/carLoan/clOrderbaseSelect}" target="rightFrame" onclick="Show(this)">资金明细</a><i></i></li>
+                            <li><cite></cite><a th:href="@{/carLoan/clOrderApplyResult}" target="rightFrame" onclick="Show(this)">审核结果</a><i></i></li>
+                            <li><cite></cite><a th:href="@{/carLoan/clOrderCheckFour}" target="rightFrame" onclick="Show(this)">四要素验证</a><i></i></li>
+                            <li><cite></cite><a th:href="@{/carLoan/clSendCarVin}" target="rightFrame" onclick="Show(this)">发送车辆Vin</a><i></i></li>
                     </ul>
                 </dd>
         </dl>
